--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <head>
-   <meta charset="UTF-8">
-   <title>The Rick and Morty Characters</title>
-   <meta name="viewport" content="width=device-width, initial-scale=1">
-   <link href="styles/style.css" rel="stylesheet" type="text/css">
-   <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+    <meta charset="UTF-8">
+    <title>The Rick and Morty Characters</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="styles/style.css" rel="stylesheet" type="text/css">
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
     <link href="https://fonts.googleapis.com/css?family=Poppins|Rubik|Rubik+Mono+One" rel="stylesheet"> 
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-	<link rel="icon" href="">
     
 </head>
 <body>
@@ -16,32 +14,34 @@
         <header id="main-header" class="header-main">
             <nav id="main-nav">
                 <a class="logo" href="">The Rick and Morty Characters</a>
-                <ul>
-                    <li><a href="" id="home">Home</a></li>
-                </ul>
-            </nav>
-            <nav id="account-nav">
-                
             </nav>
         </header>
         <!--Content-->
         <main id="main-content" class="content-main">
             <div id="character-container">
+                <div class="pagination">
+                    <button><a href="" id="home">Home</a></button>
+                    <button class="prev-page">prev</button>
+                    <button class="current-page">1</button>
+                    <button class="next-page">next</button>
+                </div>
                 <section id="character-container-grid">
-                </section>
+                </section>        
             </div>
             <div class="sidebar">
                 <div class="details">
                 </div>
+                <div class="genderGraph">    
+                </div>
+                <canvas id="graph"></canvas>
             </div>
         </main>
         <!--Footer-->
         <footer id="nav-footer">
-            <div id="license" class="footer-info">
-                <p class="footer-info-text">Made by <a href="https://github.com/natak0">natak0</a> &copy;2019</p>
-            </div>
         </footer>
     </div>
+    <!--include Chart.js for building graphs-->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
 	<script type="text/javascript" src="scripts/script.js"></script>
 </body> 
 
