--- a/index.html
+++ b/index.html
@@ -16,15 +16,17 @@
                 <a class="logo" href="">The Rick and Morty Characters</a>
             </nav>
         </header>
+
         <!--Content-->
+        <div class="pagination">
+            <a href="" id="home">home</a>
+            <a class="prev-page">prev</a>
+            <span>page </span><span class="current-page">1</span>
+            <a class="next-page">next</a>
+        </div>
         <main id="main-content" class="content-main">
             <div id="character-container">
-                <div class="pagination">
-                    <button><a href="" id="home">Home</a></button>
-                    <button class="prev-page">prev</button>
-                    <button class="current-page">1</button>
-                    <button class="next-page">next</button>
-                </div>
+                
                 <section id="character-container-grid">
                 </section>        
             </div>
